       is returned to 'actions'.
     - Fix get_action_methods returning duplicate methods when a method is both
       decorated with method attributes and set as an action in config.

  Refactoring / cleanups:
     - Reduce minimum supported perl version from 5.8.6 to 5.8.4 as there are
       many people still running/testing this version with no known issues.

  Tests:
     - Make the optional_http_server.t test an author only test which must be
       run by authors to stop it being broken again.
     - Fix recursion warnings in the test suites.

5.80011 2009-08-23 13:48:15

  Bug fixes:
      - Remove leftovers of the restarter engine. The removed code caused test
        failures, which weren't apparent for anyone still having an old version
        installed in @INC.

5.80010 2009-08-21 23:32:15

  Bug fixes:
      - Fix and add tests for a regression introduced by 5.80008.
        Catalyst::Engine is now able to send out data from filehandles larger
        than the default chunksize of 64k again.

5.80009 2009-08-21 22:21:08

  Bug fixes:
      - Fix and add tests for generating inner packages inside the COMPONENT
        method, and those packages being correctly registered as components.
        This fixes Catalyst::Model::DBIC among others.

5.80008 2009-08-21 17:47:30

  Bug fixes:
       - Fix replace_constructor warning to actually work if you make your
         application class immutable without that option.
       - Depend on Module::Pluggable 3.9 to prevent a bug wherein components
         in inner packages might not be registered. This especially affected
         tests.
       - Catalyst::Engine::FastCGI - relax the check for versions of Microsoft
         IIS. Provides compatibility with Windows 2008 R2 as well as
         (hopefully) future versions.
       - In tests which depend on the values of environment variables,
         localise the environment, then delete only relevant environment
         variables (RT#48555)